pkl-core/src/test/files/LanguageSnippetTests/input/errors/invalidTypeName3.pkl
class Foo
bar = new Foo.Bar {}